--- a/insight-stage-master1/public/css/app.css
+++ b/insight-stage-master1/public/css/app.css
@@ -30,6 +30,10 @@ body {
   .nav-link:hover{
       color: #E1A042!important;
   }
+
+  main{
+    display: block;
+  }
   .py-4 {
     padding-top: 1.2rem !important;
   }
@@ -59,6 +63,9 @@ body {
       font-size: 12px;
   }
 
+  /*======POST SLIDER============*/
+ 
+
     
   /*============= MEDIA QUERIES =============*/
   
@@ -70,7 +77,11 @@ body {
   @media (max-width: 767.98px) {
   
   }
-  
+  .slide{
+    height: 1000px;
+    width: 100%;
+    background-color: aqua;
+  }
   
   /*============ BOOTSTRAP BREAK POINTS:
   
