--- a/insight-stage-master1/public/css/stylish.css
+++ b/insight-stage-master1/public/css/stylish.css
@@ -46,6 +46,7 @@
   font-family: sans-serif;
 	color: #8d97ad;
   font-weight: 300;
+  justify-content:center;
 }
 
 .team4 h1, .team4 h2, .team4 h3, .team4 h4, .team4 h5, .team4 h6 {
@@ -71,8 +72,9 @@
 }
 
 .team4 ul li a {
-  color: #ada28d;
+  color: #c9a505;
   padding-right: 15px;
+  line-height: 22px;
   -webkit-transition: 0.1s ease-in;
   -o-transition: 0.1s ease-in;
   transition: 0.1s ease-in;
@@ -81,5 +83,5 @@
 .team4 ul li a:hover {
   -webkit-transform: translate3d(0px, -5px, 0px);
   transform: translate3d(0px, -5px, 0px);
-	color: #b19702;
+	color: #f8dd42;
 }
