--- a/insight-stage-master1/public/css/articles.css
+++ b/insight-stage-master1/public/css/articles.css
@@ -10,20 +10,34 @@
 /* ------------------------------------------------------------------- 
  * ## links
  * ------------------------------------------------------------------- */
-a {
+ a {
    color: #0054a5;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
 }
 
 a:hover, a:focus, a:active {
-   color: #000000;
+   color: #ffffff;
 }
 
 a:hover, a:active {
    outline: 0;
 }
 
+
+p {
+   margin: 0;
+   color: #ffffff;
+}
+
+
+
+@media only screen and (max-width:800px) {
+   p.lead {
+      font-size: 1.8rem;
+   }
+
+}
 
 
 
@@ -171,97 +185,37 @@ blockquote cite a, blockquote cite a:visited {
    margin-bottom: 40px;
 }
 
+.masonry .headtitle{
+   text-align: left;
+   margin-left:7%;
+   margin-top:10%;
+   margin-bottom:1%;
+}
+
 .masonry .entry__thumb, .masonry .entry__text {
    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.05);
 }
 
-.masonry .entry__thumb {
-   position: relative;
-   overflow: hidden;
-}
-
-.masonry .entry__thumb-link img {
-   vertical-align: bottom;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-}
-
-.masonry .entry__thumb-link::before {
-   content: "";
-   display: block;
-   background: rgba(0, 0, 0, 0.8);
-   opacity: 0;
-   visibility: hidden;
-   position: absolute;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-   z-index: 1;
-}
-
-.masonry .entry__thumb-link::after {
-   content: "...";
-   font-family: georgia, serif;
-   font-size: 2.7rem;
-   z-index: 1;
-   display: block;
-   height: 90px;
-   width: 90px;
-   letter-spacing: -1px;
-   line-height: 90px;
-   margin-left: -45px;
-   margin-top: -45px;
-   position: absolute;
-   left: 50%;
-   top: 50%;
-   text-align: center;
-   color: #FFFFFF;
-   opacity: 0;
-   visibility: hidden;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-   -webkit-transform: scale(0.5);
-   -ms-transform: scale(0.5);
-   transform: scale(0.5);
-}
-
-.masonry .entry__thumb:hover .entry__thumb-link::before {
-   opacity: 1;
-   visibility: visible;
-}
-
-.masonry .entry__thumb:hover .entry__thumb-link::after {
-   opacity: 1;
-   visibility: visible;
-   -webkit-transform: scale(1);
-   -ms-transform: scale(1);
-   transform: scale(1);
-}
-
-.masonry .entry__thumb:hover .entry__thumb-link img {
-   -webkit-transform: scale(1.05);
-   -ms-transform: scale(1.05);
-   transform: scale(1.05);
-}
 
 .masonry .entry__text {
-   padding: 3rem 2.8rem 3.6rem;
+   padding: 11rem 1.2rem 1.6rem;
+ 
    background-color: #FFFFFF;
 }
 
 .masonry .entry__title {
-   font-size: 2.4rem;
-   line-height: 1.375;
-   margin-top: 0;
-   margin-bottom: 2.1rem;
+   font-size: 30px;
+   font-family: 'Average_Sans';
+   line-height: 29px;
+   margin-top: 6px;
+   margin-bottom: 0rem;
+   padding: 0 5px;
 }
 
 .masonry .entry__title a {
-   color: #000000;
+   color: #ffffff;
    border-bottom: 1px solid transparent;
+
 }
 
 .masonry .entry__title a:hover, .masonry .entry__title a:focus {
@@ -269,19 +223,23 @@ blockquote cite a, blockquote cite a:visited {
 }
 
 .masonry .entry__date {
-   font-family: "metropolis-medium", sans-serif;
-   font-size: 1.4rem;
-   line-height: 1.714;
-   margin-bottom: .6rem;
+   font-family:"HindVadodara-Light";
+   font-size: 1rem;
+   line-height: 29px;
+  
 }
 
 .masonry .entry__date a {
-   color: #858585;
+   color: #FFFFFF;
 }
 
 .masonry .entry__excerpt {
-   font-size: 1.5rem;
-   line-height: 1.8;
+   margin-bottom: 3%;
+   margin-top: 3%;
+   font-size: 1rem;
+   line-height: 10px;
+   text-align: right;
+
 }
 
 .masonry .entry__meta {
@@ -291,11 +249,11 @@ blockquote cite a, blockquote cite a:visited {
 }
 
 .masonry .entry__meta a {
-   color: #0054a5;
+   color:  #ffffff;
 }
 
 .masonry .entry__meta a:hover, .masonry .entry__meta a:focus {
-   color: #000000;
+   color:#000000;
 }
 
 .masonry .entry__meta-links a::after {
@@ -449,72 +407,34 @@ blockquote cite a, blockquote cite a:visited {
  *
  * ------------------------------------------------------------------- */
 .s-content {
-   background-color: #f2f2f2;
-   padding-top: 8.4rem;
-   padding-bottom: 7.2rem;
+   background-color: #e9e8e1;
+   padding-bottom: 7rem;
+  
 }
 
-.s-content--no-padding-bottom {
-   padding-bottom: 0;
-}
 
-.s-content--narrow .row {
-   max-width: 960px;
-}
 
-.s-content__header {
-   padding-bottom: 3rem;
-   text-align: center;
-}
-
-.s-content__header h1 {
-   font-size: 4.8rem;
-   line-height: 1.25;
-   margin-top: 0;
-   letter-spacing: -.15rem;
-}
-
-.s-content__header .lead {
-   color: rgba(0, 0, 0, 0.5);
-}
 
 /* ------------------------------------------------------------------- 
  * responsive:
  * s-content
  * ------------------------------------------------------------------- */
 @media only screen and (max-width:1200px) {
-   .s-content--narrow .row {
+  .row {
       max-width: 900px;
    }
 
 }
 
-@media only screen and (max-width:1000px) {
-   .s-content--narrow .row {
-      max-width: 800px;
-   }
-
-   .s-content__header h1 {
-      font-size: 4.5rem;
-   }
-
-}
 
 @media only screen and (max-width:800px) {
    .s-content {
       padding-top: 6rem;
    }
 
-   .s-content__header h1 {
-      font-size: 4rem;
-   }
-
 }
 
-@media only screen and (max-width:600px) {
-   .s-content__header h1 {
-      font-size: 3.6rem;
-   }
+
 
 }
 
@@ -525,10 +445,12 @@ blockquote cite a, blockquote cite a:visited {
    max-width: none;
    width: 1440px;
    overflow: hidden;
+   margin:auto;
+   justify-content: center;
 }
 
 .masonry {
-   margin-bottom: 3rem;
+   margin-top: -6.4rem;
 }
 
 .masonry:after {
@@ -538,13 +460,30 @@ blockquote cite a, blockquote cite a:visited {
 }
 
 .masonry .grid-sizer, .masonry__brick {
-   width: 360px;
+   width: 370px;
+   margin-right: 0.1%;
+   margin-left: 7%;
+   margin-top:3%;
+   margin-bottom:0.1%;
+   
+   
+   
+  
+  
 }
 
 .masonry__brick {
    float: left;
-   padding: 0 20px;
+   box-shadow: 0 2px 3px 0 rgba(0,0,0,0.5);
+   
+
 }
+
+.masonry__brick:hover {
+  
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+   transition: 0.3s;
+ }
 
 /* ------------------------------------------------------------------- 
  * responsive:
@@ -628,461 +567,6 @@ blockquote cite a, blockquote cite a:visited {
 }
 
 
-/* ===================================================================
- * # s-extra
- *
- * ------------------------------------------------------------------- */
-.s-extra {
-   background-color: #FFFFFF;
-   padding-top: 7.8rem;
-   padding-bottom: 9rem;
-   font-family: "metropolis-regular", sans-serif;
-   font-size: 1.5rem;
-   line-height: 1.8;
-}
-
-.s-extra a {
-   color: #000000;
-}
-
-.s-extra a:hover, .s-extra a:focus {
-   color: #0054a5;
-}
-
-.s-extra h3, .s-extra h5 {
-   margin-top: 0;
-}
-
-.s-extra h3 {
-   font-size: 2.4rem;
-   line-height: 1.375;
-   margin-bottom: 3rem;
-}
-
-.s-extra h5 {
-   font-family: "metropolis-extrabold", sans-serif;
-   font-size: 1.6rem;
-   line-height: 1.3125;
-   margin-bottom: .6rem;
-}
-
-.s-extra .top [class*="col-"] {
-   margin-bottom: 4.8rem;
-}
-
-
-/* -------------------------------------------------------------------
- * ## popular posts
- * ------------------------------------------------------------------- */
-.s-extra .popular__post {
-   position: relative;
-   padding-left: 9.5rem;
-   margin-bottom: 3.3rem;
-   min-height: 5.4rem;
-}
-
-.s-extra .popular__thumb {
-   position: absolute;
-   top: .3rem;
-   left: 0;
-}
-
-.s-extra .popular__thumb img {
-   height: 6.9rem;
-   width: 6.9rem;
-}
-
-.s-extra .popular__meta {
-   font-size: 1.3rem;
-   line-height: 1.615;
-}
-
-
-/* -------------------------------------------------------------------
- * ## about
- * ------------------------------------------------------------------- */
-.s-extra .about {
-   padding: 0 40px;
-}
-
-.s-extra .about p {
-   margin-bottom: 1.5rem;
-}
-
-.s-extra .about__social {
-   list-style: none;
-   margin: 0;
-   padding: 0;
-   font-size: 2.4rem;
-}
-
-.s-extra .about__social li {
-   display: inline-block;
-   padding-left: 0;
-   margin-right: 9px;
-}
-
-
-/* -------------------------------------------------------------------
- * ## tags
- * ------------------------------------------------------------------- */
-.s-extra .tags-wrap {
-   max-width: 900px;
-}
-
-.s-extra .tags {
-   text-align: center;
-}
-
-.s-extra .tagcloud {
-   padding-top: .6rem;
-}
-
-.s-extra .tagcloud a {
-   display: inline-block;
-   font-family: "metropolis-extrabold", sans-serif;
-   font-size: 1.3rem;
-   line-height: 3.6rem;
-   text-transform: uppercase;
-   letter-spacing: .2rem;
-   padding: 0 2rem;
-   margin: 0 1.2rem 1.5rem 0;
-   border-radius: 3px;
-   background: #e2e2e2;
-   text-decoration: none;
-   color: #333333;
-   position: relative;
-}
-
-.s-extra .tagcloud a:hover, .s-extra .tagcloud a:focus {
-   color: #FFFFFF;
-   background: #151515;
-}
-
-/* ------------------------------------------------------------------- 
- * responsive:
- * s-extra
- * ------------------------------------------------------------------- */
-@media only screen and (max-width:1200px) {
-   .s-extra .top {
-      max-width: 900px;
-   }
-
-   .s-extra .popular__posts article:nth-child(n+5) {
-      display: none;
-   }
-
-}
-
-@media only screen and (max-width:1000px) {
-   .s-extra .top, .s-extra .tags-wrap {
-      max-width: 800px;
-   }
-
-}
-
-@media only screen and (max-width:800px) {
-   .s-extra .top, .s-extra .tags-wrap {
-      max-width: 550px;
-   }
-
-   .s-extra .about {
-      padding: 0 15px;
-   }
-
-   .s-extra .tags {
-      text-align: left;
-   }
-
-}
-
-@media only screen and (max-width:600px) {
-   .s-extra h3, .s-extra .about, .s-extra .tags {
-      text-align: center;
-   }
-
-   .s-extra .popular__thumb {
-      left: .6rem;
-   }
-
-   .s-extra .popular__thumb img {
-      height: 6.6rem;
-      width: 6.6rem;
-   }
-
-   .s-extra .about {
-      padding: 0 10px;
-   }
-
-}
-
-@media only screen and (max-width:400px) {
-   .s-extra .popular__post {
-      padding-left: 8.5rem;
-   }
-
-   .s-extra .popular__thumb {
-      left: .6rem;
-   }
-
-   .s-extra .popular__thumb img {
-      height: 6.3rem;
-      width: 6.3rem;
-   }
-
-   .s-extra .about {
-      padding: 0;
-   }
-
-}
-
-
-/* ===================================================================
- * # blog styles
- *
- * ------------------------------------------------------------------- */
-.s-content--narrow .s-content__header {
-   padding: 0 8rem;
-}
-
-.s-content--narrow h3.remove-top-margin {
-   margin-top: 0;
-}
-
-.s-content--narrow h3.quarter-top-margin {
-   margin-top: 1.5rem;
-}
-
-.s-content--narrow h3.half-top-margin {
-   margin-top: 3rem;
-}
-
-.s-content__header-title {
-   font-size: 4.2rem;
-   line-height: 1.214;
-   margin-bottom: .9rem;
-}
-
-.s-content__header-meta {
-   list-style: none;
-   margin-left: 0;
-   margin-bottom: 1.2rem;
-   font-family: "metropolis-medium", sans-serif;
-   font-size: 1.5rem;
-   line-height: 1.8;
-   position: relative;
-}
-
-.s-content__header-meta li {
-   display: inline-block;
-   padding-left: 0;
-   margin: 0 1rem;
-}
-
-.s-content__header-meta span, .s-content__header-meta a {
-   color: #000000;
-}
-
-.s-content__header-meta .cat a::after {
-   content: ",";
-}
-
-.s-content__header-meta .cat a:last-child::after {
-   content: none;
-}
-
-
-/* -------------------------------------------------------------------
- * ## content main
- * ------------------------------------------------------------------- */
-.s-content__main {
-   margin-top: 6rem;
-   padding-left: 6rem;
-   padding-right: 6rem;
-}
-
-.s-content__main img {
-   max-width: 960px;
-   margin: 3rem 0 3rem -6rem;
-}
-
-
-/* -------------------------------------------------------------------
- * ## content media
- * ------------------------------------------------------------------- */
-.s-content__media {
-   padding: 0;
-   margin-top: 4.8rem;
-}
-
-.s-content__media img {
-   vertical-align: bottom;
-}
-
-.s-content__media, .s-content__post-thumb {
-   position: relative;
-}
-
-
-/* -------------------------------------------------------------------
- * ## post tags
- * ------------------------------------------------------------------- */
-.s-content__tags {
-   margin-top: 6rem;
-   font-family: "metropolis-regular", sans-serif;
-}
-
-.s-content__tags span {
-   font-family: "metropolis-bold", sans-serif;
-   color: #151515;
-   position: relative;
-   padding-right: 55px;
-   margin-right: 1.5rem;
-   margin-top: 1.2rem;
-}
-
-.s-content__tags span::after {
-   display: inline-block;
-   content: "";
-   height: 1px;
-   width: 40px;
-   background-color: rgba(0, 0, 0, 0.2);
-   position: absolute;
-   top: 50%;
-   right: 0;
-}
-
-.s-content__tags .s-content__tag-list {
-   display: inline-block;
-   padding-right: 0;
-   margin-right: 0;
-}
-
-.s-content__tags .s-content__tag-list::after {
-   display: none;
-}
-
-.s-content__tags .s-content__tag-list a {
-   display: inline-block;
-   font-family: "metropolis-regular", sans-serif;
-   font-size: 1.3rem;
-   line-height: inherit;
-   color: #7f7f7f;
-   border: 1px solid rgba(0, 0, 0, 0.3);
-   border-radius: 3px;
-   margin-right: 6px;
-   margin-bottom: 6px;
-   padding: 0 10px;
-}
-
-.s-content__tags .s-content__tag-list a:hover, 
-.s-content__tags .s-content__tag-list a:focus {
-   background-color: #000000;
-   border-color: #000000;
-   color: #ffffff;
-}
-
-.s-content__tags .s-content__tag-list a:last-child {
-   margin-right: 0;
-}
-
-
-/* -------------------------------------------------------------------
- * ## author profile
- * ------------------------------------------------------------------- */
-.s-content__author {
-   margin-top: 10.2rem;
-   padding-left: 9rem;
-   position: relative;
-}
-
-.s-content__author img {
-   margin: 0 !important;
-   width: 6.6rem;
-   height: 6.6rem;
-   border-radius: 50%;
-   position: absolute;
-   left: 0;
-   top: 0;
-}
-
-.s-content__author p {
-   margin-bottom: 1.2rem;
-}
-
-.s-content__author-name {
-   margin-top: 0;
-}
-
-.s-content__author-name a {
-   color: #151515;
-}
-
-.s-content__author-social {
-   list-style: none;
-   margin-left: 0;
-   font-family: "metropolis-bold", sans-serif;
-   font-size: 12px;
-   text-transform: uppercase;
-   letter-spacing: 1px;
-}
-
-.s-content__author-social li {
-   display: inline-block;
-   margin-right: 1rem;
-   padding-left: 0;
-}
-
-.s-content__author-social a {
-   color: #151515;
-}
-
-
-/* -------------------------------------------------------------------
- * ## blog single page navigation
- * ------------------------------------------------------------------- */
-.s-content__pagenav {
-   margin-top: 10.2rem;
-   padding-top: 1.8rem;
-   border-top: 1px solid rgba(0, 0, 0, 0.1);
-   position: relative;
-}
-
-.s-content__nav:after {
-   content: "";
-   display: table;
-   clear: both;
-}
-
-.s-content__nav span {
-   display: block;
-   font-family: "metropolis-medium", sans-serif;
-   font-size: 12px;
-   text-transform: uppercase;
-   letter-spacing: 2.5px;
-   color: #7f7f7f;
-   margin-bottom: 1.2rem;
-   -webkit-transition: all 0.3s ease-in-out;
-   transition: all 0.3s ease-in-out;
-}
-
-.s-content__nav a {
-   font-family: "librebaskerville-bold", serif;
-   font-size: 2.2rem;
-   line-height: 1.5;
-   color: #19191b;
-}
-
-.s-content__nav a:hover span, .s-content__nav a:focus span {
-   color: #19191b;
-}
-
-.s-content__prev, .s-content__next {
-   width: 50%;
-   float: left;
-   padding-right: 2rem;
-}
-
 
 /* -------------------------------------------------------------------
  * ## format gallery
@@ -1136,127 +620,7 @@ blockquote cite a, blockquote cite a:visited {
    width: 100%;
 }
 
-/* ------------------------------------------------------------------- 
- * responsive:
- * blog styles
- * ------------------------------------------------------------------- */
-@media only screen and (max-width:1200px) {
-   .s-content--narrow .s-content__header {
-      padding: 0 6rem;
-   }
 
-   .s-content__main {
-      padding-left: 5rem;
-      padding-right: 5rem;
-   }
-
-   .s-content__main img {
-      max-width: 900px;
-      margin: 3rem 0 3rem -5rem;
-   }
-
-}
-
-@media only screen and (max-width:1000px) {
-   .s-content--narrow .s-content__header {
-      padding: 0 6rem;
-   }
-
-   .s-content__header-title {
-      font-size: 3.8rem;
-   }
-
-   .s-content__main {
-      padding-left: 4rem;
-      padding-right: 4rem;
-   }
-
-   .s-content__main img {
-      max-width: 800px;
-      margin: 3rem 0 3rem -4rem;
-   }
-
-}
-
-@media only screen and (max-width:900px) {
-   .s-content__main, .s-content__media {
-      padding-left: 15px;
-      padding-right: 15px;
-   }
-
-   .s-content--narrow .s-content__header {
-      padding: 0 5rem;
-   }
-
-   .s-content__main img {
-      max-width: 100%;
-      margin: 3rem 0 3rem;
-   }
-
-}
-
-@media only screen and (max-width:800px) {
-   .s-content__header-title {
-      font-size: 3.6rem;
-   }
-
-   .s-content__prev, .s-content__next {
-      width: 100%;
-      float: none;
-      padding: 0;
-      text-align: left;
-      margin-bottom: 1.8rem;
-   }
-
-   .s-content__author {
-      text-align: center;
-      padding-left: 0;
-   }
-
-   .s-content__author img {
-      position: static;
-   }
-
-   .s-content__author-name {
-      margin-top: 1.2rem;
-   }
-
-}
-
-@media only screen and (max-width:600px) {
-   .s-content--narrow .s-content__header, .s-content__main, .s-content__media {
-      padding-left: 10px;
-      padding-right: 10px;
-   }
-
-   .s-content__prev, .s-content__next {
-      text-align: center;
-   }
-
-}
-
-@media only screen and (max-width:500px) {
-   .s-content__header-title {
-      font-size: 3.4rem;
-   }
-
-}
-
-@media only screen and (max-width:400px) {
-   .s-content--narrow .s-content__header, .s-content__main, .s-content__media {
-      padding-left: 0;
-      padding-right: 0;
-   }
-
-   .s-content--narrow .s-content__header {
-      margin-top: 0;
-   }
-
-   .s-content__header-title {
-      font-size: 3.3rem;
-   }
-
-}
 
 
 
