--- a/insight-stage-master1/public/css/articles.css
+++ b/insight-stage-master1/public/css/articles.css
@@ -221,8 +221,8 @@ blockquote cite a, blockquote cite a:visited {
 
 .masonry .entry__date {
    font-family:"HindVadodara-Light";
-   font-size: 1rem;
-   line-height: 29px;
+   font-size: 13px;
+   line-height: 40px;
   
 }
 
@@ -455,7 +455,7 @@ blockquote cite a, blockquote cite a:visited {
 }
 
 .masonry .grid-sizer, .masonry__brick {
-   width: 370px;
+   width: 300px;
    margin-right: 0.1%;
    margin-left: 7%;
    margin-top:3%;
@@ -497,7 +497,7 @@ blockquote cite a, blockquote cite a:visited {
    }
 
    .masonry .grid-sizer, .masonry .masonry__brick {
-      width: 340px;
+      width: 300px;
    }
 
 }
@@ -508,7 +508,7 @@ blockquote cite a, blockquote cite a:visited {
    }
 
    .masonry .grid-sizer, .masonry .masonry__brick {
-      width: 370px;
+      width: 300px;
    }
 
 }
