--- a/insight-stage-master1/public/css/slider.css
+++ b/insight-stage-master1/public/css/slider.css
@@ -1,4 +1,7 @@
 /*
+
+Open Sans ------->Letra
+
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
     margin-left: 0px;
@@ -220,10 +223,16 @@ a{
         visibility: visible;
     }
 }
+#image{
+    text-align: center;
+    margin-bottom: 0px;
+}
 .slider-title {
+    font-weight: bold;
+    font-family:'Open Sans';
     text-align: center;
     margin: 30px auto;
-    color: #E1A042;
+    color: #000000;
 }
 
 .carousel-control-prev-icon, .carousel-control-next-icon {
