--- a/insight-stage-master1/public/css/app.css
+++ b/insight-stage-master1/public/css/app.css
@@ -19,7 +19,7 @@ text-decoration:none;
       font-size: .9rem;
       font-weight: 600;
       letter-spacing: .1rem;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: "Open Sans";
       box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
       z-index: 1;
   }
@@ -28,7 +28,7 @@ text-decoration:none;
       text-align: center;
   }
   .nav-link{
-      color: #E1A042!important;
+      color: #000000!important;
   }
 
   .nav-link.active,
