--- a/insight-stage-master1/public/css/app.css
+++ b/insight-stage-master1/public/css/app.css
@@ -3,7 +3,7 @@ body {
     height: 100%;
     overflow-x: hidden;
     font-family: 'Montserrat', sans-serif;
-    color: #ffffff;
+    color: #616971;
   }
   a:link
 {
@@ -19,7 +19,7 @@ text-decoration:none;
       font-size: .9rem;
       font-weight: 600;
       letter-spacing: .1rem;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: "Open Sans";
       box-shadow: 0 .5rem .5rem rgba(0, 0, 0, .2);
       z-index: 1;
   }
@@ -28,10 +28,9 @@ text-decoration:none;
       text-align: center;
   }
   .nav-link{
-      color: #E1A042!important;
+      color: #000000!important;
   }
 
-  .nav-link.active,
   .nav-link:hover{
       color: #E1A042!important;
   }
@@ -52,81 +51,7 @@ text-decoration:none;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-    text-align:center;
   }
-
-/*---------------------submit article form ----------------------- */
-
-  form{
-    margin:auto;
-    line-height: 40px;
-  }
-
-  
-
-
-  input[type=text] {
-    background: #ffffff;
-    color:#1a3146; 
-    border: 2px solid #ffffff; 
-    border-bottom: 1px solid #1a3146; 
-    width: 300px; 
-    height: 40px;
-    justify-content: center;
-    text-align: center;
-  }
-   
-
-  input[type=submit] {
-    background: #ffffff;
-    color:#1a3146; 
-    border: 2px solid #1a3146; 
-    border-radius: 25px; 
-    justify-content: center;
-    text-align: center;
-    height: 50px;
-    width:300px;
-  }
-
-
-   .messaging{
-   
-    height: 200px;
-    padding-left:1%;
-    padding-right:10%;
-    color:#1a3146;
-    background-color:#ffffff;
-    border:1px solid #1a3146;
-    border-radius:1%;
-  
-    
-   }
-
-  input[type=file], .textmessage {
-    display:none;
-    
-   
-  }
-
-  
-   .file{
-
-    background: #ffffff;
-    border-radius: 25px; 
-    color:#1a3146; 
-    border: 2px solid #1a3146;
-    height: 50px;
-    width:300px;
-    justify-content: center;
-    text-align: center;
-
-
-  }
-
-  
-
-
-
  
   /*============= FOOTER =============*/
   footer {
@@ -183,10 +108,7 @@ text-decoration:none;
   .row, .container-fluid {
     margin-left: 0px !important;
     margin-right: 0px !important;
-    padding-bottom:4px;
   }
-
-  
   
   /*-- Fixed Background Image --*/
   .fixed-background {
@@ -217,17 +139,52 @@ text-decoration:none;
     will-change: transform;
   }
 
-  
+  /*MEMBERS**/
+  @import url(//fonts.googleapis.com/css?family=Montserrat:300,500);
+.team4 {
+  font-family: sans-serif;
+	color: #8d97ad;
+  font-weight: 300;
+  justify-content:center;
+}
 
-  .title{
-    margin-top:8%;
-    margin-bottom:100%;
-    font-family:'Merriweather';
-    color:#1a3146; 
-    
-  }
-  
- 
+.team4 h2, .team4 h3, .team4 h4, .team4 h5, .team4 h6 {
+  color: #3e4555;
+}
+.team4 .font-weight-medium {
+   font-family: "Coves";
+   font-weight: 40px;
+   line-height: 22px;
+   
+}
 
+.team4 h5 {
+    line-height: 22px;
+    font-size: 18px;
+}
 
+.team4 .subtitle {
+    color: #8d97ad;
+    line-height: 24px;
+		font-size: 13px;
+}
 
+.team4 ul li a {
+  color: #acacac;
+  padding-right: 15px;
+  line-height: 22px;
+  -webkit-transition: 0.1s ease-in;
+  -o-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.team4 ul li a:hover {
+  -webkit-transform: translate3d(0px, -5px, 0px);
+  transform: translate3d(0px, -5px, 0px);
+	color: #f8dd42;
+}
+.slider-title {
+  text-align: center;
+  margin: 30px auto;
+  color: #E1A042;
+}
