--- a/insight-stage-master1/public/css/app.css
+++ b/insight-stage-master1/public/css/app.css
@@ -2,7 +2,7 @@
 body {
     height: 100%;
     overflow-x: hidden;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Open Sans";
     color: #616971;
   }
   a:link
